--- a/professional-portfolio/src/components/styles/PortfolioPage.css
+++ b/professional-portfolio/src/components/styles/PortfolioPage.css
@@ -67,15 +67,15 @@ body {
 }
 
 .text--sub {
-	font-size: 12px;
+	font-size: 14px;
 	letter-spacing: 0.5rem;
 	text-transform: uppercase;
 	margin-bottom: 40px;
+    
 }
 
 .text--big {
-	font-family: 'Poppins', sans-serif;
-	font-size: 7.5em;
+	font-size: 4em;
 	font-weight: 700;
 	line-height: 110px;
   margin-left: -8px;
@@ -89,12 +89,11 @@ body {
 }
 
 .text__background {
-	font-family: 'Poppins', sans-serif;
 	position: absolute;
 	left: 72px;
 	bottom: -60px;
 	color: rgba(0,0,0,0.05);
-	font-size: 170px;
+	font-size: 115px;
 	font-weight: 700;
 }
 
@@ -147,12 +146,12 @@ body {
 
 /* Pikachu */
 
-.flex--pikachu .flex__item--left {
-	background: #f8d41f;
+.flex--p1 .flex__item--left {
+	background: #D5A021;
 }
 
-.flex--pikachu .flex__item--right {
-	background: #f4ecc5;
+.flex--p1 .flex__item--right {
+	background: #2C5959;
 }
 
 /* Blaziken */
@@ -197,7 +196,8 @@ body {
 	position: absolute;
 	bottom: 20px;
 	right: 15%;
-	max-height: 40vw;
+	height: 40vw;
+    max-width: 40vw;
 	opacity: 1;
 	transform: translate3d(0,0,0);
 	transition: opacity 0.43s 0.6s, transform 0.4s 0.65s cubic-bezier(0, 0.88, 0.4, 0.93);
