--- a/professional-portfolio/src/components/styles/navbar.css
+++ b/professional-portfolio/src/components/styles/navbar.css
@@ -1,6 +1,7 @@
 #bar {
-    height: 5vh;
-    width: 100vw;
+    height: 50px;
+    top: 0px;
+    width: 100%;
     position:fixed;
     z-index: 3;
 }
@@ -28,6 +29,7 @@ ul {
   
   li a:hover:not(.active) {
     background-color: #111;
+    color: white;
   }
   
   .active {
