--- a/professional-portfolio/src/components/styles/footer.css
+++ b/professional-portfolio/src/components/styles/footer.css
@@ -1,6 +1,6 @@
-.footer {
-    position: absolute;
-    bottom: 0;
+.footer{
+    position: fixed;
+    bottom: 0px;
     z-index: 4;
     width: 100%;
     background-color: black;
