--- a/professional-portfolio/src/components/styles/navbar.css
+++ b/professional-portfolio/src/components/styles/navbar.css
@@ -10,7 +10,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
     background-color: #000;
     height: 5vh;
   }
